@@ -73,6 +73,7 @@ Changes in current version:
  o introduce bufferevent_read_buffer; allows reading without memory copy.
  o expose bufferevent_setwatermark via header files and fix high watermark on read
  o fix a bug in buffrevent read water marks and add a test for them
+ o fix a bug in which bufferevent_write_buffer would not schedule a write event
 
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
